Generate texture display lists procedurally

--- a/base/BUILD.bazel
+++ b/base/BUILD.bazel
@@ -82,6 +82,7 @@ cc_library(
         "swap16.c",
         "swap16arr.c",
         "swap32.c",
+        "xatoi.c",
         "xmalloc.c",
     ],
     hdrs = [
