--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -41,8 +41,6 @@ cc_binary(
         "text.h",
         "texture.c",
         "texture.h",
-        "texture_dl.c",
-        "texture_dl.h",
         "time.c",
         "time.h",
     ],
@@ -54,6 +52,7 @@ cc_binary(
         "//base/n64:scheduler",
         "//base/pak:n64",
         "//game/core",
+        "//game/n64/texture_dl",
         "//sdk:aspMain",
         "//sdk:gspF3DEX2.xbus",
         "//sdk:rspboot",
