--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -5,6 +5,7 @@ cc_library(
     name = "core",
     srcs = [
         "camera.c",
+        "entity.c",
         "game.c",
         "model.c",
         "monster.c",
