--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -7,6 +7,7 @@ cc_library(
         "camera.c",
         "entity.c",
         "game.c",
+        "menu.c",
         "model.c",
         "monster.c",
         "particle.c",
@@ -21,6 +22,7 @@ cc_library(
         "game.h",
         "input.h",
         "material.h",
+        "menu.h",
         "model.h",
         "monster.h",
         "particle.h",
