--- a/assets/BUILD.bazel
+++ b/assets/BUILD.bazel
@@ -12,6 +12,7 @@ asset_data(
         "//assets/fonts/baksosapi",
         "//assets/images",
         "//assets/images:big_images",
+        "//assets/images:buttons",
         "//assets/models:enemy",
         "//assets/models:fairy2",
         "//assets/models:logo",
