--- a/assets/BUILD.bazel
+++ b/assets/BUILD.bazel
@@ -13,6 +13,7 @@ asset_data(
         "//assets/images",
         "//assets/images:big_images",
         "//assets/images:buttons",
+        "//assets/images:point",
         "//assets/models:enemy",
         "//assets/models:fairy2",
         "//assets/models:logo",
