--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -14,6 +14,7 @@ cc_library(
         "physics.c",
         "player.c",
         "random.c",
+        "spawn.c",
         "walk.c",
     ],
     hdrs = [
@@ -29,6 +30,7 @@ cc_library(
         "physics.h",
         "player.h",
         "random.h",
+        "spawn.h",
         "time.h",
         "walk.h",
     ],
