--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -14,6 +14,7 @@ cc_library(
         "physics.c",
         "player.c",
         "random.c",
+        "sfx.c",
         "stage.c",
         "walk.c",
     ],
@@ -30,6 +31,7 @@ cc_library(
         "physics.h",
         "player.h",
         "random.h",
+        "sfx.h",
         "stage.h",
         "time.h",
         "walk.h",
