Play monster death sounds

--- a/assets/sfx/BUILD.bazel
+++ b/assets/sfx/BUILD.bazel
@@ -5,7 +5,30 @@ audio_tracks(
     srcs = [
         "clang.wav",
         "fanfare.flac",
+        "haa_1.flac",
+        "haa_2.flac",
+        "haa_3.flac",
+        "haa_4.flac",
+        "haa_5.flac",
+        "haa_6.flac",
+        "mdie_1.aif",
+        "mdie_2.aif",
+        "mdie_3.aif",
+        "mdie_4.aif",
+        "mdie_5.aif",
+        "mdie_6.aif",
+        "mdie_7.aif",
         "swoosh.wav",
+        "wap_1.flac",
+        "wap_2.flac",
+        "wap_3.flac",
+        "wap_4.flac",
+        "wap_5.flac",
+        "wha_1.flac",
+        "wha_2.flac",
+        "wha_3.flac",
+        "wha_4.flac",
+        "wha_5.flac",
     ],
     rate = "32000",
     visibility = ["//visibility:public"],
