Extract terrain to separate file

--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -55,6 +55,8 @@ cc_binary(
         "system.h",
         "task.c",
         "task.h",
+        "terrain.c",
+        "terrain.h",
         "text.c",
         "text.h",
         "texture.c",
