--- a/assets/images/BUILD.bazel
+++ b/assets/images/BUILD.bazel
@@ -8,6 +8,7 @@ textures(
     srcs = [
         "Ariella.png",
         "Ground023.png",
+        "Marble009.png",
         "Marble012.png",
     ],
     format = "rgba.16",
